ios_versioned_docs/version-1.2.8/reference/dyte-ui-config.mdx
---
sidebar_position: 8
---

# DyteUIConfig

| Property name                   | Data type           | Required | Use                                                                                                                            |
| ------------------------------- | ------------------- | -------- | ------------------------------------------------------------------------------------------------------------------------------ |
| controlBar                      | BOOL                | No       | Should the control bar (at the bottom of the meeting) be visible to the participant? Default: `true`.                          |
| controlBarElements              | NSDictionary        | No       | Object containing element list from control bar to be able to customize what all controls should be visible to the participant |
| controlBarElements.fullscreen   | BOOL                | No       | Should the button to make meeting fullscreen be visible? Default: `true`.                                                      |
| controlBarElements.share        | BOOL                | No       | Should the button to invite other participants to the meeting be visible? Default: `true`.                                     |                                    |
| controlBarElements.chat         | BOOL                | No       | Should the button to open in-meeting chat be visible? Default: `true`.                                                         |
| controlBarElements.polls        | BOOL                | No       | Should the button to display in-meeting polls be visible? Default: `true`.                                                     |
| controlBarElements.participants | BOOL                | No       | Should the button to display participant list be visible? Default: `true`.                                                     |
| controlBarElements.plugins      | BOOL                | No       | Should the button to activate plugins in a meeting be visible? Default: `true`.                                                |
| header                          | BOOL                | No       | Should the header bar be visible to the participant? Default: `true`.                                                          |
| headerElements                  | NSDictionary        |          | Object containing element list from header to be able to customize what all should be visible to the participant               |
| headerElements.logo             | BOOL                | No       | Should a logo be visible in the meeting? Default: `true`.                                                                      |
| headerElements.title            | BOOL                | No       | Should a title be visible in the meeting? Default: `true`.                                                                     |
| headerElements.participantCount | BOOL                | No       | Should the participant count be visible in the meeting? Default: `true`.                                                       |
| headerElements.clock            | BOOL                | No       | Should a timer be visible in the meeting? Default: `true`.                                                                     |
| logo                            | NSString (url)      | No       | Publicly accessible link to the logo that needs to be shown in the meeting                                                     |
| colors                          | NSDictionary        | No       | Object containing color values to be used as the theme for the meeting                                                         |
| colors.primary                  | NSString (hexColor) | Yes      | Color of the primary elements like participant name box. Default: `'#2160FD'`.                                                 |
| colors.secondary                | NSString (hexColor) | Yes      | Color of the secondary elements like control bar, control buttons, hover. Default: `'#262626'`.                                |
| colors.textPrimary              | NSString (hexColor) | Yes      | Color of the text elements. Default: `'#EEEEEE'`.                                                                              |
| colors.videoBackground          | NSString (hexColor) | Yes      | Color behind the video when the video is turned off. Default: `'#1A1A1A'`.                                                     |
