ios_versioned_docs/version-1.23/reference/dyte-ui-config.mdx
---
sidebar_position: 8
---

# DyteUIConfig

| Property name                   | Data type                | Required                 | Use                                                                                                                                                   |
| ------------------------------- | ------------------------ | ------------------------ | ----------------------------------------------------------------------------------------------------------------------------------------------------- |
| controlBar                      | boolean                  | No                       | Should the control bar (at the bottom of the meeting) be visible to the participant? Default: `true`.                                                 |
| controlBarElements              | object                   | No                       | Object containing element list from control bar to be able to customize what all controls should be visible to the participant                        |
| controlBarElements.fullscreen   | boolean                  | No                       | Should the button to make meeting fullscreen be visible? Default: `true`.                                                                             |
| controlBarElements.chat         | boolean                  | No                       | Should the button to open in-meeting chat be visible? Default: `true`.                                                                                |
| controlBarElements.polls        | boolean                  | No                       | Should the button to display in-meeting polls be visible? Default: `true`.                                                                            |
| controlBarElements.participants | boolean                  | No                       | Should the button to display participant list be visible? Default: `true`.                                                                            |
| controlBarElements.plugins      | boolean                  | No                       | Should the button to activate plugins in a meeting be visible? Default: `true`.                                                                       |
| header                          | boolean                  | No                       | Should the header bar be visible to the participant? Default: `true`.                                                                                 |
| headerElements                  | object                   |                          | Object containing element list from header to be able to customize what all should be visible to the participant                                      |
| headerElements.logo             | boolean                  | No                       | Should a logo be visible in the meeting? Default: `true`.                                                                                             |
| headerElements.title            | boolean                  | No                       | Should a title be visible in the meeting? Default: `true`.                                                                                            |
| headerElements.participantCount | boolean                  | No                       | Should the participant count be visible in the meeting? Default: `true`.                                                                              |
| headerElements.clock            | boolean                  | No                       | Should a timer be visible in the meeting? Default: `true`.                                                                                            |
| aloneHereElement                | boolean                  | No                       | Should an element displaying custom HTML to the participant be visible, when they are alone in / first to the meeting? Default: `true`.               |
| logo                            | string_url               | No                       | Publicly accessible link to the logo that needs to be shown in the meeting                                                                            |
| colors                          | object                   | No                       | Object containing color values to be used as the theme for the meeting                                                                                |
| colors.primary                  | string_hexColor          | Yes                      | Color of the primary elements like participant name box. Default: `'#2160FD'`.                                                                        |
| colors.secondary                | string_hexColor          | Yes                      | Color of the secondary elements like control bar, control buttons, hover. Default: `'#262626'`.                                                       |
| colors.textPrimary              | string_hexColor          | Yes                      | Color of the text elements. Default: `'#EEEEEE'`.                                                                                                     |
| colors.videoBackground          | string_hexColor          | Yes                      | Color behind the video when the video is turned off. Default: `'#1A1A1A'`.                                                                            |
| dimensions                      | object                   | No                       | Object containing info about meeting dimensions within the container. If omitted, the meeting takes up the complete area of the root display element. |
| dimensions.width                | number                   | With `dimensions.height` | Desired width of the meeting element, in pixels                                                                                                       |
| dimensions.height               | number                   | With `dimensions.width`  | Desired height of the meeting element, in pixels                                                                                                      |
| dimensions.mode                 | string                   | No                       | Set the mode to one of the pre-defined values - `fillParent` takes up entire area available to the parent container, instead of root container        |
